tests/paczka1/small_fuzzy/53822717.err
Error in line 1: qV94 A667 26,0
Error in line 11: A667 S548 93,9
Error in line 13: A667 S112 39,5
